<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail" traslatable="true">Details</string>

    <string name="title_activity_settings">Settings</string>

    <string name="action_refresh" traslatable="true">Refresh</string>

    <!--Eingabe des Ortes-->
    <string name="pref_location_label" traslatable="true">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">Landau</string>

    <!--Auswahl der Anzeige-Einheit Celsius/Fahrenheit-->
    <string name="pref_unit_label"  traslatable="true">Select Display Unit</string>
    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_metric">Celsius</string>
    <string name="pref_unit_imperial">Fahrenheit</string>
    <string name="pref_unit_dialog_title" traslatable="true">Choose unit to display</string>

</resources>
